# pichia-kb

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
data/projects/pichia-collagen/: config.yaml  knowledge_architecture.md
docs/: pipeline_layers.md
scripts/: docker-build.sh  experiment_summary.py  kb-core.service  migrate_figures_to_panels.py  show_experiment.py  start.sh  survey_figure_vector.py
src/kb_core/: __init__.py  cli.py  config.py
src/kb_core/curator/: __init__.py  agent.py  inspection.py  mutations.py
src/kb_core/ingestion/: __init__.py  cross_normalizer.py  dialectical_reviewer.py  domain_synthesizer.py  experiment_extractor.py  extractor.py  figure_extractor.py  lineage_extractor.py  normalizer.py  pdf_processor.py  synthesizer.py
src/kb_core/knowledge_base/: kb.py  structured_store.py  vector_store.py
src/kb_core/llm/: __init__.py  base.py  gemini.py  openai_compat.py
src/kb_core/orchestrator/: __init__.py  runner.py  tasks.py
src/kb_core/qa/: assistant.py
src/kb_core/schema/: __init__.py  process_knowledge.py
src/kb_core/schema_engine/: __init__.py  audit.py  chunk.py  dynamic.py  extraction_result.py  loader.py  meta.py  paper_experiments.py  provenance.py
src/pichia_kb/: __init__.py  cli.py
tests/: test_curator_inspection.py  test_curator_mutations.py  test_schema.py  test_schema_engine.py
web/: Home.py  _project.py
web/pages/: 1_💬_问答.py  2_🔬_控制原则.py  3_⚖️_辩证综合.py  4_🔍_语义搜索.py  5_🧪_实验抽取.py  6_📊_跨论文对比.py  7_🛠️_Schema_Curator.py  8_📄_论文管理.py
(+17 files in other folders)
